@@ -71,6 +71,8 @@ struct CmdLineSetup_t
     int  speedRunnerMode = 0;
     //! Draw the speed-run timer semi-transparently
     bool speedRunnerSemiTransparent = false;
+    //! Speed-run timer blink effect policy
+    int  speedRunnerBlinkEffect = 0;
 
     bool showControllerState = false;
 };
