@@ -27,6 +27,8 @@
 #include "graphics.h"
 #include "game_main.h"
 #include "globals.h"
+#include "presetup.h"
+#include "compat.h"
 
 
 std::string GameplayTimer::formatTime(int64_t t)
@@ -121,9 +123,37 @@ void GameplayTimer::updateColorSpin(float delta)
     }
 }
 
+void GameplayTimer::updateAllowBlink()
+{
+    int effectBlink = (m_blinkEffect == SPEEDRUN_EFFECT_BLINK_UNDEFINED) ?
+                          g_compatibility.speedrun_blink_effect :
+                          m_blinkEffect;
+
+    switch(effectBlink)
+    {
+    default:
+    case SPEEDRUN_EFFECT_BLINK_OPAQUEONLY:
+        m_allowBlink = !m_semiTransparent;
+        break;
+
+    case SPEEDRUN_EFFECT_BLINK_ALWAYS:
+        m_allowBlink = true;
+        break;
+
+    case SPEEDRUN_EFFECT_BLINK_NEVER:
+        m_allowBlink = false;
+        break;
+    }
+}
+
 void GameplayTimer::setSemitransparent(bool t)
 {
     m_semiTransparent = t;
+}
+
+void GameplayTimer::setBlinkEffect(int be)
+{
+    m_blinkEffect = be;
 }
 
 bool GameplayTimer::semitransparent()
@@ -143,6 +173,7 @@ void GameplayTimer::reset()
     m_levelBlinkActive = false;
     m_worldBlinkActive = false;
     m_blinkingFactor = 0.0f;
+    updateAllowBlink();
 }
 
 void GameplayTimer::resetCurrent()
@@ -151,6 +182,7 @@ void GameplayTimer::resetCurrent()
     m_levelBlinkActive = false;
     m_worldBlinkActive = false;
     m_blinkingFactor = 0.0f;
+    updateAllowBlink();
 }
 
 void GameplayTimer::load()
@@ -173,6 +205,7 @@ void GameplayTimer::load()
     o.read("total", m_cyclesTotal, 0);
     m_cyclesCurrent = 0; // Reset the counter
     o.endGroup();
+    updateAllowBlink();
 }
 
 void GameplayTimer::save()
@@ -211,11 +244,8 @@ void GameplayTimer::tick()
     {
         if(LevelSelect || (!LevelSelect && LevelMacro == 0))
             m_cyclesCurrent += 1;
-        else
-        {
-            if(!m_levelBlinkActive)
-                m_levelBlinkActive = true;
-        }
+        else if(m_allowBlink && !m_levelBlinkActive)
+            m_levelBlinkActive = true;
 
         if(!m_cyclesFin)
             m_cyclesTotal += 1;
@@ -235,7 +265,8 @@ void GameplayTimer::tick()
 void GameplayTimer::onBossDead()
 {
     m_cyclesFin = true;
-    m_worldBlinkActive = true;
+    if(m_allowBlink)
+        m_worldBlinkActive = true;
 }
 
 void GameplayTimer::render()
