@@ -38,6 +38,7 @@ extern bool g_drawController;
 void speedRun_tick();
 
 void speedRun_setSemitransparentRender(bool r);
+void speedRun_setBlinkEffect(int be);
 
 void speedRun_syncControlKeys(int plr, const Controls_t &keys);
 
