@@ -19,6 +19,7 @@ Changelog for 1.3.6 [WIP]
 -Fixed the vanilla bug: a Player can stuck in the pipe when enters it being a fairy (@Wohlstand)
 -Added an option to enable the fast walking on the world map (@ds-sloth, (@Wohlstand)
 -Added an ability to customize UI/common assets from the episode and level sides (@Wohlstand)
+-Added a blink effect at speedrun timer on level/episode completion (@Wohlstand)
 
 Changes for 1.3.5.3-1
 -Fixed autostart events behaviour
